Revert "User & Assignment modülleri ile SecurityConfig'te refaktör ve hata iyileştirmeleri"
This reverts commit b5ec7baa3ffa8d068a06ef2f7357f974a526e7a3.